--- a/Ayush Portfolio.html
+++ b/Ayush Portfolio.html
@@ -1,13 +1,16 @@
 <html>
 <head>
 <title>Ayush Portfolio</title>
+<link rel="icon" type= image/x-icon" href="C:\Users\panda\OneDrive\Pictures\Screenshots\Screenshot 2024-10-28 103327.png">
+<link rel="stylesheet" href="Ayush Portfolio.css">
 </head>
 <body>
 <h1 align=center><b><big>Hello, I am AYUSH PANDA.</b></big></h1>
+<form>
 <fieldset>
-
+<big>
 <h1>About me:</h1>
-<h1align=left><img src="C:\Users\panda\Downloads\Me.jpg" width="200" height="200">
+<h1align=center><a href="https://drive.google.com/file/d/1UJwh0foDUyfLt0aLY4adzoQL5zmjn3kB/view?usp=drive_link">Click here to view image</a>
 <p>Hello! I’m <b>Ayush Panda</b>, a passionate <b>web developer</b> and <b>I am a Fresher</b> but in college, I am making around 10-15 websites in building dynamic and responsive websites. I specialize in <b>HTML, CSS,</b> and <b>JavaScript</b> alongwith <b> Artificial Intelligence and Machine Learning, C, C++, Java, Power BI,  Python, creating clean and efficient code to deliver high-quality web experiences.</p>
 <br>
 <p>In addition to my technical skills, I excel in problem-solving, team collaboration, ensuring user-friendly interfaces that enhance the user journey. My projects range from personal portfolios and college notes to full-stack applications.</p>
@@ -36,9 +39,9 @@
 <li>Python</li>
 <li>Power BI</li>
 </ul>
-
-
+</big>
 <footer>
-        <p>&copy; 2024 Ayush Panda. All rights reserved.</p>
+<table border=1><td>
+        <p align=right>&copy; 2024 Ayush Panda. All rights reserved.</p><table></td>
     </footer>
 </body></html>
