--- a/Ayush Portfolio.html
+++ b/Ayush Portfolio.html
@@ -1,47 +1,49 @@
-<html>
-<head>
-<title>Ayush Portfolio</title>
-<link rel="icon" type= image/x-icon" href="C:\Users\panda\OneDrive\Pictures\Screenshots\Screenshot 2024-10-28 103327.png">
-<link rel="stylesheet" href="Ayush Portfolio.css">
-</head>
-<body>
-<h1 align=center><b><big>Hello, I am AYUSH PANDA.</b></big></h1>
-<form>
-<fieldset>
-<big>
-<h1>About me:</h1>
-<h1align=center><a href="https://drive.google.com/file/d/1UJwh0foDUyfLt0aLY4adzoQL5zmjn3kB/view?usp=drive_link">Click here to view image</a>
-<p>Hello! I’m <b>Ayush Panda</b>, a passionate <b>web developer</b> and <b>I am a Fresher</b> but in college, I am making around 10-15 websites in building dynamic and responsive websites. I specialize in <b>HTML, CSS,</b> and <b>JavaScript</b> alongwith <b> Artificial Intelligence and Machine Learning, C, C++, Java, Power BI,  Python, creating clean and efficient code to deliver high-quality web experiences.</p>
-<br>
-<p>In addition to my technical skills, I excel in problem-solving, team collaboration, ensuring user-friendly interfaces that enhance the user journey. My projects range from personal portfolios and college notes to full-stack applications.</p>
-<br>
-<p>I'm constantly learning and staying updated with the latest technologies to keep improving and delivering even better solutions. I’m excited to take on new challenges and contribute to innovative projects. </p></fieldset>
-
-<h1>Resume:</h1>
-<p>Here, is my resume.</p>
-<a href=https://www.canva.com/design/DAGJZB-Ya04/k4MT5u0u5r06w9-KB8R0WQ/view?utm_content=DAGJZB-Ya04&utm_campaign=designshare&utm_medium=link&utm_source=editor>My Resume</a>
-
-<h1>Contact information:</h1>
-<p><b>Phone Number:<u>7978077028</u>
-<p>E-mail address: <u>pandaayush141@gmail.com</u></p></b>
-
-<h1>Skills:</h1>
-<p>I am specialized in:
-<ul>
-<li>Artificial Intelligence and Machine Learning</li>
-<li>C</li>
-<li>C++</li>
-<li>CSS</li>
-<li>Java</li>
-<li>JAVASCRIPT</li>
-<li>HTML</li>
-<li>MS OFFICE(Word, Excel, Powerpoint)</li>
-<li>Python</li>
-<li>Power BI</li>
-</ul>
-</big>
+<html>  
+    <head>  
+    <title>Calculator</title>    
+</head>  
+<body>  
+    <h1 align="center">  
+        Calculator  
+    </h1>  
+    <form name="Calculator" class = "calculator" >  
+<table border="2" align="center" cellpadding="15" cellspacing="12" bgcolor="#c0c0c0">  
+<tr>  
+<td>  
+<input type="text" name="Input" Size="35" id="display">  
+<br>  
+</td>  
+</tr>  
+<tr>  
+<td>  
+<input type="button" name = "one" style="font-size:30px" value=" 1 " OnClick="Calculator.Input.value += '1'">  
+<input type="button" name = "two" style = "font-size:30px" value=" 2 " OnCLick="Calculator.Input.value += '2'">  
+<input type="button" name = "three" style="font-size:30px" value=" 3 " OnClick="Calculator.Input.value += '3'">  
+<input type="button" name="add" class ="btnTop" style="font-size:30px" value=" + " OnClick="Calculator.Input.value += ' + '">  
+<br>  
+<input type="button" name = "four" style="font-size:30px" value=" 4 " OnClick="Calculator.Input.value += '4'">  
+<input type="button" name = "five" style="font-size:30px" value=" 5 " OnCLick="Calculator.Input.value += '5'">  
+<input type="button" name = "six" style="font-size:30px" value=" 6 " OnClick="Calculator.Input.value += '6'">  
+<input type="button" name = "minus" style="font-size:30px" value=" - " OnClick="Calculator.Input.value += ' - '">  
+<br>  
+<input type="button" name = "seven" style="font-size:30px" value=" 7 " OnClick="Calculator.Input.value += '7'">  
+<input type="button" name = "eight" style="font-size:30px" value=" 8 " OnCLick="Calculator.Input.value += '8'">  
+<input type="button" name = "nine" style="font-size:30px" value=" 9 " OnClick="Calculator.Input.value += '9'">  
+<input type="button" name = "mul" style="font-size:30px" value=" * "   
+OnClick="Calculator.Input.value += ' * '">  
+<br>  
+<input type="button" name = "clear" style="font-size:30px" value=" c " OnClick="Calculator.Input.value = ''">  
+<input type="button" name="zero" style="font-size:30px" value=" 0 " OnClick="Calculator.Input.value += '0'">  
+<input type="button" name="DoIt" style="font-size:30px" value=" = " OnClick="Calculator.Input.value = eval(Calculator.Input.value)">  
+<input type="button" name="div" style="font-size:30px" value=" / " OnClick="Calculator.Input.value += ' / '">  
+<br>  
+</td>  
+</tr>  
+</table>
 <footer>
 <table border=1><td>
-        <p align=right>&copy; 2024 Ayush Panda. All rights reserved.</p><table></td>
+         <p>&copy; 2024 Ayush Panda. All rights reserved.</p><table></td>
     </footer>
-</body></html>
+  </form>  
+</body>  
+</html>     
